--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="m-3">
   <h1 class="text-center">Toko Incer</h1>
   
-  <div id="kotakNota">
+
        
         <style>
             .invoice-box {
@@ -115,7 +115,7 @@
   
 
     <body>
-        <div class="invoice-box">
+        <div class="invoice-box" id="kotakNota">
             <table cellpadding="0" cellspacing="0">
                 <tr class="top">
                     <td colspan="2">
@@ -199,4 +199,13 @@
               <button class="btn btn-success" id="cetak">Cetak</button>
         </div>
     </body>
+    <script>
+     $('#cetak').click(function() {
+         // tentukan elemen html yang akan dibuat jadi pdf
+         let elemenNota = document.getElementById('kotakNota')
+         
+         // panggil fungsi html2pdf dengan parameter elemen html sebelumnya
+         html2pdf(elemenNota)
+     })
+ </script>
 </html>
